# realsense_camera

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  package.xml
config/: 80-realsense-usb.rules  RealsenseCamera.cfg  realsense.rviz
infrared_patch/: README
launch/: realsense_camera.launch  realsense_camera_config.launch  realsense_frames.launch  realsense_r200_camera.launch  realsense_r200_rviz.launch  realsense_rviz.launch  realsense_sr300_camera.launch
msg/: realsenseConfig.msg
src/: capturer_mmap.c  capturer_mmap.cpp  capturer_mmap.h  realsense_camera.cpp  realsense_camera_config.cpp  udev_unit.cpp  udev_unit.h  v4l2-ctl-common.cpp  v4l2-ctl.h  v4l_unit.cpp  v4l_unit.h
srv/: get_rgb_uv.srv
